# flutter_rust_plugin

./: .gitignore  README.md  pubspec.yaml
cmake/: rust.cmake
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc
lib/: flutter_rust.dart
lib/src/: flutter_rust_platform.dart
rust/: Cargo.toml
rust/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
windows/: CMakeLists.txt  flutter_rust_plugin.cpp  flutter_rust_plugin.h  flutter_rust_plugin_c_api.cpp
windows/include/flutter_rust/: flutter_rust_plugin_c_api.h
windows/rust/: CMakeLists.txt  rust_native.lib
